ingressroute-open-webui-gpu02-t4.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-t4
  namespace: open-webui-t4
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`open-webui-t4.83-206-89-105.nip.io`)
    middlewares:
#    - name: security
#    - name: ratelimit
    services:
    - name: open-webui
      port: 80
  tls:
    certResolver: letsencrypt
