ingressroute-open-webui-gpu02.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.containo.us/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"open-webui","namespace":"open-webui"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`open-webui.83-206-89-105.nip.io`)","middlewares":[{"name":"security"},{"name":"ratelimit"}],"services":[{"name":"open-webui","port":80}]}],"tls":{"certResolver":"letsencrypt"}}}
  creationTimestamp: "2024-07-10T14:33:19Z"
  generation: 1
  name: open-webui
  namespace: open-webui
  resourceVersion: "250863169"
  uid: c397dd5e-9002-4be8-acb5-9632b7f2aabd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`open-webui.83-206-89-105.nip.io`)
    middlewares:
    - name: security
    - name: ratelimit
    services:
    - name: open-webui
      port: 80
  tls:
    certResolver: letsencrypt
