ingressroute-open-webui-pipelines-gpu02.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.containo.us/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"open-webui-pipelines","namespace":"open-webui"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`open-webui-pipelines.83-206-89-105.nip.io`)","middlewares":[{"name":"security"},{"name":"ratelimit"}],"services":[{"name":"open-webui-pipelines","port":9099}]}],"tls":{"certResolver":"letsencrypt"}}}
  creationTimestamp: "2024-07-10T14:37:26Z"
  generation: 1
  name: open-webui-pipelines
  namespace: open-webui
  resourceVersion: "250864160"
  uid: 9c6fe035-f82f-4656-bf9c-fa8acc9350c4
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`open-webui-pipelines.83-206-89-105.nip.io`)
    middlewares:
    - name: security
    - name: ratelimit
    services:
    - name: open-webui-pipelines
      port: 9099
  tls:
    certResolver: letsencrypt
